@startuml

title __GENDARME's Class Diagram__\n

  namespace edu.hm.hafner {
    namespace analysis {
      namespace parser {
        namespace gendarme {
          class edu.hm.hafner.analysis.parser.gendarme.GendarmeParser {
              {static} - FILE_PATTERN : Pattern
              {static} - serialVersionUID : long
              + parse()
              - extractFileNameMatch()
              - extractPriority()
              - parseRules()
              - parseViolations()
          }
        }
      }
    }
  }
  

  namespace edu.hm.hafner {
    namespace analysis {
      namespace parser {
        namespace gendarme {
          class edu.hm.hafner.analysis.parser.gendarme.GendarmeRule {
              - name : String
              - typeName : String
              - url : URL
              + getName()
              + getType()
              + getTypeName()
              + getUrl()
              + setName()
              + setType()
              + setTypeName()
              + setUrl()
          }
        }
      }
    }
  }
  

  namespace edu.hm.hafner {
    namespace analysis {
      namespace parser {
        namespace gendarme {
          enum GendarmeRuleType {
            Assembly
            Method
            Type
          }
        }
      }
    }
  }
  

  edu.hm.hafner.analysis.parser.gendarme.GendarmeParser -up-|> edu.hm.hafner.analysis.IssueParser
  edu.hm.hafner.analysis.parser.gendarme.GendarmeRule o-- edu.hm.hafner.analysis.parser.gendarme.GendarmeRuleType : type


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
